# mindbridge

./: .env.docker.example  .env.example  .env.minimal.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cloudrun  Makefile  README.md  cloud-run-deploy.yaml  cloud-run.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.toml  real_api_test_report.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  security-check.yml  uv-lock-update.yml
deploy/: cloud-run.yaml  cloudbuild.yaml
deploy/systemd/: mindbridge.service
docs/: DEPLOYMENT_GUIDE.md  EASY_SETUP.md  LOCAL_TESTING.md  README.md  USER_GUIDE.md  VAULT_MIGRATION.md  architecture.md  basic-usage.md  deployment.md  development-guide.md  github-backup-setup.md  github-setup-guide.md  improvement_tasks.md  quick-start.md  setup-guide.md  testing.md  yaml-front-matter.md
docs/deploy/: beelink-fedora.md  cloud-run.md  local.md  overview.md
docs/developer/: api-documentation.md  architecture.md  development-guide.md  field-reference.md  local-testing.md  repository-guidelines.md  yaml-frontmatter-system.md
docs/integrations/: external-integrations.md  garmin-integration.md
docs/maintenance/: cloud-run-cost-optimization-tasks.md  deployment-docs-plan.md  github-sync.md  housekeeping.md  integrations-refactor-plan.md  readme-template.md  secret-manager-refactor.md  security.md
docs/operations/: cloud-run.md  deployment.md  gcp-deployment.md  monitoring.md  troubleshooting.md
docs/user/: basic-usage.md  commands-reference.md  easy-setup.md  examples.md  installation.md  quick-start.md  vault-migration.md
scripts/: README.md  cleanup-artifact-registry.sh  deploy.sh  docker-local-test.sh  full-deploy.sh  generate-speech-credentials.sh  local-run.sh  local-setup.sh  manage.sh  setup-environment.sh  setup-github-secrets.sh  setup-optional-features.sh  setup-secrets.sh
scripts/manage/: _common.sh  deploy.sh  env.sh  local.sh  maintenance.sh  optional.sh  secrets.sh
src/: __init__.py  main.py
src/ai/: README.md  __init__.py  gemini_client.py  mock_processor.py  models.py  note_analyzer.py  processor.py  url_processor.py  vector_store.py
src/audio/: README.md  __init__.py  models.py  speech_processor.py
src/bot/: README.md  __init__.py  backup_system.py  channel_config.py  client.py  config_manager.py  handlers.py  message_processor.py  metrics.py  mock_client.py  models.py  notification_system.py  review_system.py
src/config/: README.md  __init__.py  secure_settings.py  settings.py
src/finance/: README.md  __init__.py  budget_manager.py  commands.py  expense_manager.py  message_handler.py  models.py  reminder_system.py  report_generator.py  subscription_manager.py
src/garmin/: README.md  __init__.py  cache.py  client.py  formatter.py  models.py
src/health_analysis/: README.md  __init__.py  analyzer.py  integrator.py  models.py  scheduler.py
src/integrations/: README.md  __init__.py  google_calendar.py
src/lifelog/: README.md  __init__.py  analyzer.py  commands.py  manager.py  message_handler.py  models.py  templates.py
src/monitoring/: README.md  __init__.py  health_server.py
src/obsidian/: README.md  __init__.py  daily_integration.py  file_manager.py  github_direct.py  github_sync.py  interfaces.py  local_data_manager.py  metadata.py  models.py  organizer.py  refactored_file_manager.py  template_system.py
src/security/: README.md  __init__.py  access_logger.py  secret_manager.py  simple_admin.py
src/tasks/: README.md  __init__.py  commands.py  models.py  reminder_system.py  report_generator.py  schedule_manager.py  task_manager.py
src/utils/: README.md  __init__.py  error_handler.py  lazy_loader.py  logger.py  lru_cache.py  mcp_client.py  memory_manager.py  mixins.py
tests/: __init__.py  conftest.py
tests/integration/: test_complete_integration.py
tests/manual/: README.md  quick_voice_test.py  simple_test.py  test_garmin_integration.py  test_google_calendar_fix.py  test_manage.sh  test_real_voice.py  test_voice_memo.py
tests/unit/: test_ai_processing.py  test_ai_processor.py  test_bot.py  test_config.py  (+17 more)
(+60 files in other folders)
