[project]
name = "mindbridge"
version = "0.1.0"
description = "MindBridge: Personal AI-powered knowledge management system for Discord and Obsidian integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"

dependencies = [
    "discord.py>=2.5.2",
    "google-genai>=0.2.0",
    "google-cloud-speech>=2.21.0",
    "google-cloud-secret-manager>=2.20.0",
    "garminconnect>=0.2.28",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.0",
    "asyncio-throttle>=1.0.2",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "tenacity>=9.1.2",
    "pydub>=0.25.1",
    "python-dateutil>=2.9.0.post0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.0",
    "cryptography>=45.0.7",
    "PyNaCl>=1.5.0",
]



[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

# 手動検証用テストは柔軟に許可
[tool.ruff.lint.per-file-ignores]
"tests/manual/*.py" = ["E402", "F841"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
# CI では unit / integration のみ検出。 manual は明示実行に限定
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.8",
    "mypy>=1.17.1",
    "types-python-dateutil",
    "types-pyyaml",
    "types-aiofiles",
    "types-requests",
    "types-beautifulsoup4",
    "pre-commit>=4.3.0",
]

# セキュリティツール（個人使用向け）
security = [
    "bandit>=1.7.5",        # Python セキュリティリンター
    "safety>=3.0.0",        # 依存関係脆弱性チェック
    "typer<0.12",           # Safety CLI が旧Typer APIに依存
    "marshmallow<4",        # Safety CLI のスキーマ互換維持
]

[project.optional-dependencies]
# Google のレガシー API クライアント群は通常不要。
# 必要な場合のみ以下を追加インストールしてください:
#   uv sync --extra google-api
google-api = [
    "google-api-python-client>=2.181.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
]
